fixes, dashboard created

--- a/node-mysql-crud-app/views/dashboard-panes/cookbook.ejs
+++ b/node-mysql-crud-app/views/dashboard-panes/cookbook.ejs
@@ -1,9 +1,21 @@
 <div class="tab-pane" id="cookbook" role="tabpanel" aria-labelledby="profile-tab">
+
     <h1>Cookbook</h1>
+
+
+    <!-- Add a Recipe -->
+    <div class="card mb-3">
+        <div class="card-body">
+          <h1 class="lead">Want to add your own recipe?</h1>
+          <a href="/add" class="btn btn-primary">Add</a>
+        </div>
+    </div>
+
     <!-- Saved Recipes -->
     <div class="card mb-3">
         <div class="card-body">
           <h1 class="lead">No saved recipes yet!</h1>
         </div>
     </div>
+
 </div>
