--- a/node-mysql-crud-app/views/partials/navbar2.ejs
+++ b/node-mysql-crud-app/views/partials/navbar2.ejs
@@ -1,4 +1,4 @@
-<body class="mb-0">
+<body>
     <nav class="navbar navbar-dark bg-dark fixed-top">
 
     	<a class="navbar-brand" href="/">Elite Recipes</a>
