--- a/node-mysql-crud-app/views/dashboard-panes/cookbook.ejs
+++ b/node-mysql-crud-app/views/dashboard-panes/cookbook.ejs
@@ -2,12 +2,13 @@
 
     <h1>Cookbook</h1>
 
-
     <!-- Add a Recipe -->
-    <div class="card mb-3">
-        <div class="card-body">
-          <h1 class="lead">Want to add your own recipe?</h1>
-          <a href="/add" class="btn btn-primary">Add</a>
+    <div class="card mb-3 align-items-center">
+        <div class="row mt-3">
+            <h1 class="lead">Want to add your own?</h1>
+        </div>
+        <div class="row mb-3">
+            <a href="/add" class="btn btn-secondary">Add a Recipe</a>
         </div>
     </div>
 
