--- a/node-mysql-crud-app/views/partials/header.ejs
+++ b/node-mysql-crud-app/views/partials/header.ejs
@@ -17,3 +17,12 @@
     <title>Elite Recipes</title>
 
 </head>
+<style>
+    .table-wrapper {
+        margin-top: 50px;
+    }
+
+      .add-recipe-form {
+        margin-top: 50px;
+    }
+</style>
