--- a/node-mysql-crud-app/views/add-player.ejs
+++ b/node-mysql-crud-app/views/add-player.ejs
@@ -22,17 +22,17 @@
 
     <!-- Form -->
     <div class="container">
-
-        <form class="add-recipe-form" action="method="post" enctype="multipart/form-data" id="addRecipe">
+                                                                                      <!-- id="addRecipe" -->
+        <form class="add-recipe-form" action="method="post" enctype="multipart/form-data">
 
             <!-- Row 1 -->
             <div class="form-row">
                 <div class="form-group col-md-4">
-                    <input type="text" class="form-control" name="Name" id="Name" placeholder="Recipe ID" required>
+                    <input type="text" class="form-control" name="id" id="id" placeholder="Recipe ID" required>
                 </div>
 
                 <div class="form-group col-md-8">
-                    <input type="text" class="form-control" name="title" id="title" placeholder="Recipe Title" required>
+                    <input type="text" class="form-control" name="name" id="name" placeholder="Recipe Name" required>
                 </div>
             </div>
             <!-- End Row 1 -->
