--- a/node-mysql-crud-app/views/edit-player.ejs
+++ b/node-mysql-crud-app/views/edit-player.ejs
@@ -6,7 +6,7 @@
         <p class="text-center text-danger"><%= message %></p>
     <% } %>
 
-    <% if (recipes) { %>
+    <% if (recipe) { %>
         <form class="add-recipe-form" action="" method="post" enctype="multipart/form-data">
             <div class="form-row">
                 <div class="form-group col-md-4">
