search/results pages

--- a/node-mysql-crud-app/views/dashboard-panes/cookbook.ejs
+++ b/node-mysql-crud-app/views/dashboard-panes/cookbook.ejs
@@ -1,6 +1,6 @@
 <div class="tab-pane" id="cookbook" role="tabpanel" aria-labelledby="profile-tab">
 
-    <h1>Cookbook</h1>
+    <h1 class="mt-2">Cookbook</h1>
 
     <!-- Add a Recipe -->
     <div class="card mb-3 align-items-center">
