--- a/node-mysql-crud-app/views/dashboard-panes/profile.ejs
+++ b/node-mysql-crud-app/views/dashboard-panes/profile.ejs
@@ -1,5 +1,6 @@
 <div class="tab-pane active" id="profile" role="tabpanel" aria-labelledby="profile-tab">
-    <h1>Profile</h1>
+
+    <h1 class="mt-2">Profile</h1>
 
     <!-- User profile -->
     <div class="card mb-3">
