--- a/node-mysql-crud-app/views/partials/navbar2.ejs
+++ b/node-mysql-crud-app/views/partials/navbar2.ejs
@@ -1,13 +1,28 @@
 <body>
+
     <nav class="navbar navbar-dark bg-dark fixed-top">
 
-    	<a class="navbar-brand" href="/">Elite Recipes</a>
+        <div class="navbar-header">
+            <a class="navbar-brand" href="/">Elite Recipes</a>
+        </div>
 
-          <div class="navbar-nav">
-              <form class="form-inline" method="get" action="/">
-                  <div class="form-group ml-4">
-                      <button class="btn btn-sm" id="logout-btn">Logout</button>
-                  </div>
-              </form>
-          </div>
+<!--        <div class="col">
+
+            <ul class="nav nav-pills">
+                <li class="nav-item">
+                    <a class="nav-link" href="/">Home</a>
+                </li>
+
+            </ul>
+        </div>
+-->
+
+        <div class="navbar-nav">
+            <form class="form-inline" method="get" action="/">
+                <div class="form-group ml-4">
+                    <button class="btn btn-sm" id="logout-btn">Logout</button>
+                </div>
+            </form>
+         </div>
+
 	</nav>
