--- a/node-mysql-crud-app/views/add-player.ejs
+++ b/node-mysql-crud-app/views/add-player.ejs
@@ -23,7 +23,7 @@
     <!-- Form -->
     <div class="container">
                                                                                       <!-- id="addRecipe" -->
-        <form class="add-recipe-form" action="/testdb" method="get">
+        <form class="add-recipe-form" action="/testdb" method="GET">
 
             <!-- Row 1 -->
             <div class="form-row">
