--- a/node-mysql-crud-app/views/index.ejs
+++ b/node-mysql-crud-app/views/index.ejs
@@ -24,10 +24,13 @@
             </div>
 
             <hr>
-            <p class="lead text-center">Elite Recipes allows users to find delicious recipes by entering ingredients that they have. Or, if a user wants to know to a specific recipe, that can be searched too!</p>
+            <p class="lead text-center">Elite Recipes allows users to find delicious recipes. Search below!</p>
 
             <div class="topnav">
-                <input type="text" placeholder="Search...">
+                <form method="get" action="/result">
+                    <input type="text" name="search" id="search" placeholder="Enter Recipe Title...">
+                    <button type="submit" class="btn btn-secondary">Search</button>
+                </form>
             </div>
 
             <br>
