--- a/node-mysql-crud-app/views/result.ejs
+++ b/node-mysql-crud-app/views/result.ejs
@@ -4,7 +4,7 @@
 <!-- Displays a table of recipes -->
     <div class="container pt-4">
         <div class="table-wrapper">
-          <% if (recipe.length > 0) {%>
+          <% if (recipes.length > 0) {%>
           <table class="table table-hovered">
              <thead class="thead-light">
                  <tr>
