--- a/node-mysql-crud-app/views/result.ejs
+++ b/node-mysql-crud-app/views/result.ejs
@@ -55,7 +55,7 @@ var recipe = [
                          <td>
                              <a href="/edit/<%= recipe.id %>" class="btn btn-sm btn-secondary mb-2">Edit</a>
                              <a href="/delete/<%= recipe.id %>" class="btn btn-sm btn-secondary mb-2">Delete</a>
-                             <a href="/star/<%recipe.id %>" class="btn btn-sm btn-secondary">Star</a>
+                             <a href="/star/<%= recipe.id %>" class="btn btn-sm btn-secondary">Star</a>
                          </td>
                      </tr>
                  <% }) %>
