--- a/node-mysql-crud-app/views/dashboard.ejs
+++ b/node-mysql-crud-app/views/dashboard.ejs
@@ -1,6 +1,18 @@
 <% include partials/header.ejs %>
 <% include partials/navbar2.ejs %>
 
+<!-- Test data -->
+<%
+var users = [
+	{	fname: 'Haley',
+	    lname: 'Little',
+	    username: 'hplittle',
+	    email: 'haley@gmail.com',
+		skill: 'Beginner'
+	},
+];
+%>
+
 <main role="main">
 	<div class= "container mt-5">
 		<ul class="nav nav-tabs justify-content-end pt-4">
