--- a/node-mysql-crud-app/views/dashboard-panes/profile.ejs
+++ b/node-mysql-crud-app/views/dashboard-panes/profile.ejs
@@ -3,6 +3,7 @@
     <h1 class="mt-2">Profile</h1>
 
     <!-- User profile -->
+<!--
     <div class="card mb-3">
         <div class="card-body">
             <% if (users.fname && users.lname) { %>
@@ -23,4 +24,39 @@
             </dl>
         </div>
     </div>
+-->
+
+    <!-- Displays a table of recipes -->
+        <div class="container pt-4">
+            <div class="table-wrapper">
+          	<% if (users.length > 0) {%>
+              <table class="table table-hovered">
+                 <thead class="thead-light">
+                     <tr>
+                         <th scope="col">First Name</th>
+                         <th scope="col">Last Name</th>
+                         <th scope="col">Username</th>
+                         <th scope="col">Email</th>
+                         <th scope="col">Skill Level</th>
+                     </tr>
+                 </thead>
+                 <tbody>
+                     <% users.forEach((user, index) => { %>
+                         <tr>
+                             <th scope="row"><%= user.firstname %></th>
+                             <td><%= user.lastname %></td>
+                             <td><%= user.username %></td>
+                             <td><%= user.email %></td>
+                             <td><%= user.skill %></td>
+                         </tr>
+                     <% }) %>
+                 </tbody>
+             </table>
+        		<% } else { %>
+                    <p class="text-center">User not found.</p>
+    				<% } %>
+            </div>
+            <hr>
+        </div>
+
 </div>
