--- a/node-mysql-crud-app/views/dashboard.ejs
+++ b/node-mysql-crud-app/views/dashboard.ejs
@@ -2,24 +2,90 @@
 <% include partials/navbar2.ejs %>
 
 <main role="main">
-	<div class= "container mt-5">
-		<ul class="nav nav-tabs justify-content-end pt-4">
-	        <li class="nav-item">
-				<a class="nav-link active" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="true">Profile</a>
-	        </li>
-			<li class="nav-item">
-				<a class="nav-link" id="cookbook-tab" data-toggle="tab" href="#cookbook" role="tab" aria-controls="cookbook" aria-selected="false">Cookbook</a>
-			</li>
-		</ul>
+    <div class="container mt-5">
+        <ul class="nav nav-tabs justify-content-end pt-4">
+            <li class="nav-item">
+                <a class="nav-link active" id="profile-tab" data-toggle="tab" href="#profile" role="tab"
+                   aria-controls="profile" aria-selected="true">Profile</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" id="cookbook-tab" data-toggle="tab" href="#cookbook" role="tab"
+                   aria-controls="cookbook" aria-selected="false">Cookbook</a>
+            </li>
+        </ul>
 
-		<div class="tab-content">
-	        <!-- Displays the metadata for the user and restaurant -->
-	        <% include dashboard-panes/profile.ejs %>
+        <div class="tab-content">
+            <h1 class="mt-2">Profile</h1>
 
-			<!-- Displays the metadata for the user and restaurant -->
-			<% include dashboard-panes/cookbook.ejs %>
-		</div>
-	</div>
+            <!-- Displays a table of recipes -->
+            <div class="container pt-4">
+                <div class="table-wrapper">
+                    <table class="table table-hovered">
+                        <thead class="thead-light">
+                        <tr>
+                            <th scope="col">First Name</th>
+                            <th scope="col">Last Name</th>
+                            <th scope="col">Email</th>
+                            <th scope="col">Skill Level</th>
+                            <th scope="col">Username</th>
+                            <th scope="col">Password</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr>
+                            <th scope="row"><%= user.firstname %></th>
+                            <td><%= user.lastname %></td>
+                            <td><%= user.email %></td>
+                            <td><%= user.skill %></td>
+                            <td><%= user.username %></td>
+                            <td><%= user.password %></td>
+                        </tr>
+                        </tbody>
+                    </table>
+
+                </div>
+                <hr>
+            </div>
+
+        </div>
+    </div>
+
+    <div class="container pt-4">
+        <div class="table-wrapper">
+            <% if (recipes.length > 0) {%>
+                <table class="table table-hovered">
+                    <thead class="thead-light">
+                    <tr>
+                        <th scope="col">id</th>
+                        <th scope="col">Name</th>
+                        <th scope="col">Ingredients</th>
+                        <th scope="col">Instructions</th>
+                        <th scope="col">Action</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <% recipes.forEach((recipe, index) => { %>
+                        <tr>
+                            <th scope="row"><%= recipe.id %></th>
+                            <td><%= recipe.name %></td>
+                            <td><%= recipe.ingredients %></td>
+                            <td><%= recipe.instructions %></td>
+                            <td>
+                                <a href="/edit/<%= recipe.id %>" class="btn btn-sm btn-secondary mb-2">Edit</a>
+                                <a href="/delete/<%= recipe.id %>" class="btn btn-sm btn-secondary mb-2">Delete</a>
+                                <a href="/star/<%= recipe.id %>" class="btn btn-sm btn-secondary">Star</a>
+                            </td>
+                        </tr>
+                    <% }) %>
+                    </tbody>
+                </table>
+            <% } else { %>
+                <p class="text-center">No recipes found. Go <a href="/add" >here</a> to add recipe.</p>
+            <% } %>
+        </div>
+        <hr>
+    </div>
+
 </main>
 
 <% include partials/footer.ejs %>
