--- a/node-mysql-crud-app/views/partials/navbar.ejs
+++ b/node-mysql-crud-app/views/partials/navbar.ejs
@@ -18,7 +18,7 @@
 			</ul>
 		</div>
 
-		<form class="form-inline" method="get" action="/dashboard">
+		<form class="form-inline" method="get" action="/login">
 			<div class="form-group">
 				<label class="sr-only" for="emailInput">Email</label>
 				<input id="emailInput" name="email" class="form-control-sm mr-2" type="email" placeholder="Email" aria-label="Email" required />
