--- a/node-mysql-crud-app/views/dashboard.ejs
+++ b/node-mysql-crud-app/views/dashboard.ejs
@@ -42,7 +42,55 @@
                 </div>
                 <hr>
             </div>
+        </div>
 
+        <h1 class="mt-2">Cookbook</h1>
+        <!-- Add a Recipe -->
+        <div class="card mb-3 align-items-center">
+            <div class="row mt-3">
+                <h1 class="lead">Want to add your own?</h1>
+            </div>
+            <div class="row mb-3">
+                <a href="/add" class="btn btn-secondary">Add a Recipe</a>
+            </div>
+        </div>
+
+        <!-- Saved Recipes -->
+        <div class="card mb-3">
+            <div class="card-body">
+                <!-- Displays a table of recipes -->
+                <div class="table-wrapper">
+                    <% if (recipes.length > 0) {%>
+                        <table class="table table-hovered">
+                            <thead class="thead-light">
+                            <tr>
+                                <th scope="col">id</th>
+                                <th scope="col">Name</th>
+                                <th scope="col">Ingredients</th>
+                                <th scope="col">Instructions</th>
+                                <th scope="col">Action</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <% recipes.forEach((recipe, index) => { %>
+                                <tr>
+                                    <th scope="row"><%= recipe.id %></th>
+                                    <td><%= recipe.name %></td>
+                                    <td><%= recipe.ingredients %></td>
+                                    <td><%= recipe.instructions %></td>
+                                    <td>
+                                        <a href="/edit/<%= recipe.id %>" class="btn btn-sm btn-secondary mb-2">Edit</a>
+                                        <a href="/delete/<%= recipe.id %>" class="btn btn-sm btn-secondary mb-2">Delete</a>
+                                    </td>
+                                </tr>
+                            <% }) %>
+                            </tbody>
+                        </table>
+                    <% } else { %>
+                        <p class="text-center">No recipes found. Go <a href="/add" >here</a> to add recipe.</p>
+                    <% } %>
+                </div>
+            </div>
         </div>
     </div>
 
