--- a/node-mysql-crud-app/views/add-player.ejs
+++ b/node-mysql-crud-app/views/add-player.ejs
@@ -27,7 +27,11 @@
 
             <!-- Row 1 -->
             <div class="form-row">
-                <div class="form-group col-md-4">
+                <div class="form-group col-md-2">
+                        <input type="text" class="form-control" name="uid" id="uid" placeholder="User ID" required>
+                </div>
+
+                <div class="form-group col-md-2">
                     <input type="text" class="form-control" name="id" id="id" placeholder="Recipe ID" required>
                 </div>
 
