--- a/node-mysql-crud-app/views/edit-player.ejs
+++ b/node-mysql-crud-app/views/edit-player.ejs
@@ -1,33 +1,34 @@
 <% include partials/header.ejs %>
 <% include partials/navbar2.ejs %>
 
-<div class="container">
-    <% if (message != '') { %>
-        <p class="text-center text-danger"><%= message %></p>
-    <% } %>
+<div class="container pt-5">
 
     <% if (recipe) { %>
-        <form class="add-recipe-form" action="" method="post" enctype="multipart/form-data">
+        <form class="add-recipe-form" action="/update" method="get" enctype="multipart/form-data">
             <div class="form-row">
                 <div class="form-group col-md-4">
-                    <label for="Name">recipe id</label>
-                    <input type="text" class="form-control" name="Name" id="Name" value="<%= recipes.Name %>" required disabled title="Recipe ID cannot be edited.">
+                    <label for="Name">Recipe ID</label>
+                    <input type="text" class="form-control" name="id" id="id" value="<%= recipe.id %>" required readonly title="Recipe ID cannot be edited.">
                 </div>
                 <div class="form-group col-md-4">
-                    <label for="title">Recipe Title</label>
-                    <input type="text" class="form-control" name="title" id="title" value="<%= recipes.Value.title %>" required>
+                    <label for="title">Recipe Name</label>
+                    <input type="text" class="form-control" name="name" id="name" value="<%= recipe.name %>" required>
                 </div>
                 <div class="form-group col-md-4">
-                    <label for="ingredients">ingredients</label>
-                    <input type="text" class="form-control" name="ingredients" id="ingredients" value="<%= recipes.Value.ingredients %>" required>
+                    <label for="ingredients">Ingredients</label>
+                    <input type="text" class="form-control" name="ingredients" id="ingredients" value="<%= recipe.ingredients %>" required>
+                </div>
+                <div class="form-group col-md-4">
+                    <label for="ingredients">Instructions</label>
+                    <input type="text" class="form-control" name="instructions" id="instructions" value="<%= recipe.instructions %>" required>
                 </div>
             </div>
 
             <button type="submit" class="btn btn-success float-right">Update Recipe</button>
         </form>
-    <% } else { %>
+        <% } else { %>
         <p class="text-center">Recipe Not Found. Go <a href="/add">here</a> to add recipes.</p>
-    <% } %>
+   <% } %>
 </div>
 </div>
 </body>
