--- a/node-mysql-crud-app/views/result.ejs
+++ b/node-mysql-crud-app/views/result.ejs
@@ -23,9 +23,7 @@
                          <td><%= recipe.ingredients %></td>
                          <td><%= recipe.instructions %></td>
                          <td>
-                             <a href="/edit/<%= recipe.id %>" class="btn btn-sm btn-secondary mb-2">Edit</a>
-                             <a href="/delete/<%= recipe.id %>" class="btn btn-sm btn-secondary mb-2">Delete</a>
-                             <a href="/star/<%= recipe.id %>" class="btn btn-sm btn-secondary">Star</a>
+                             <a href="/star?id=<%= recipe.id %>" class="btn btn-sm btn-secondary">Star</a>
                          </td>
                      </tr>
                  <% }) %>
