--- a/node-mysql-crud-app/views/add-player.ejs
+++ b/node-mysql-crud-app/views/add-player.ejs
@@ -62,7 +62,7 @@
 
             <!-- Row 4 -->
             <div class="form-row justify-content-center">
-                <button type="submit" class="btn btn-primary float-right">Add Recipe</button>
+                <button type="submit" class="btn btn-secondary float-right">Add Recipe</button>
             </div>
             <!-- End Row 4 -->
 
