--- a/node-mysql-crud-app/views/index.ejs
+++ b/node-mysql-crud-app/views/index.ejs
@@ -24,13 +24,13 @@
             </div>
 
             <hr>
-            <p class="lead text-center">Elite Recipes allows users to find delicious recipes. Search below!</p>
+            <p class="lead text-center">We let our numbers do the talking. Our users have an average cookbook size of</p>
 
-            <div class="topnav">
-                <form method="get" action="/result">
-                    <input type="text" name="search" id="search" placeholder="Enter Recipe Title...">
-                    <button type="submit" class="btn btn-secondary">Search</button>
-                </form>
+            <div class="card mx-auto col-2">
+                <div class="card-body">
+                    <h1 class="mt-2 mb-2" style="font-size:20px"><%= ravg %></h1>
+                </div>
+
             </div>
 
             <br>
