--- a/node-mysql-crud-app/views/dashboard.ejs
+++ b/node-mysql-crud-app/views/dashboard.ejs
@@ -3,10 +3,10 @@
 
 <main role="main">
     <div class="container mt-5">
-
-        <p class="lead text-center pt-5">Elite Recipes allows users to find delicious recipes. Search below!</p>
-
-        <div class="topnav align-middle">
+        <div class="row justify-content-center">
+            <p class="lead text-center pt-5">Elite Recipes allows users to find delicious recipes. Search below!</p>
+        </div>
+        <div class="row justify-content-center">
             <form method="get" action="/result">
                 <input type="text" name="search" id="search" placeholder="Enter Recipe Title...">
                 <input type="text" name="uid" id="uid" value="<%= users[0].uid %>" style="display:none">
@@ -18,50 +18,50 @@
             <h1 class="mt-2">Profile</h1>
 
             <!-- Displays profile table -->
-            <div class="container pt-4">
+            <div class="container">
                 <div class="table-wrapper">
-                    <% if (users.length > 0) {%>
-                    <table class="table table-hovered">
-                        <thead class="thead-light">
-                        <tr>
-                            <th scope="col">First Name</th>
-                            <th scope="col">Last Name</th>
-                            <th scope="col">Email</th>
-                            <th scope="col">Skill Level</th>
-                            <th scope="col">Username</th>
-                            <th scope="col">Password</th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        <% users.forEach((user, index) => { %>
-                        <tr>
-                            <th scope="row"><%= user.firstname %></th>
-                            <td><%= user.lastname %></td>
-                            <td><%= user.email %></td>
-                            <td><%= user.skill %></td>
-                            <td><%= user.username %></td>
-                            <td><%= user.password %></td>
-                        </tr>
-                        <% }) %>
-                        </tbody>
-                    </table>
-                        <% } else { %>
-                            <p class="text-center">No user found.</p>
-                        <% } %>
+                    <% if (users.length > 0) { %>
+                        <table class="table table-hovered">
+                            <thead class="thead-light">
+                            <tr>
+                                <th scope="col">First Name</th>
+                                <th scope="col">Last Name</th>
+                                <th scope="col">Email</th>
+                                <th scope="col">Skill Level</th>
+                                <th scope="col">Username</th>
+                                <th scope="col">Password</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <% users.forEach((user, index) => { %>
+                                <tr>
+                                    <th scope="row"><%= user.firstname %></th>
+                                    <td><%= user.lastname %></td>
+                                    <td><%= user.email %></td>
+                                    <td><%= user.skill %></td>
+                                    <td><%= user.username %></td>
+                                    <td><%= user.password %></td>
+                                </tr>
+                            <% }) %>
+                            </tbody>
+                        </table>
+                    <% } else { %>
+                        <p class="text-center">No user found.</p>
+                    <% } %>
 
                 </div>
                 <hr>
             </div>
         </div>
 
-        <h1 class="mt-2">Cookbook</h1>
+        <h1 class="pt-3">Cookbook</h1>
         <!-- Add a Recipe -->
-        <div class="card mb-3 align-items-center">
+        <div class="card mb-3 mt-3 align-items-center">
             <div class="row mt-3">
                 <h1 class="lead">Want to add your own?</h1>
             </div>
             <div class="row mb-3">
-                <a href="/add" class="btn btn-secondary">Add a Recipe</a>
+                <a href="/add?uid=<%= users[0].uid %>" class="btn btn-secondary">Add a Recipe</a>
             </div>
         </div>
 
@@ -70,7 +70,7 @@
             <div class="card-body">
                 <!-- Displays a table of recipes -->
                 <div class="table-wrapper">
-                    <% if (recipes.length > 0) {%>
+                    <% if (recipes.length > 0) { %>
                         <table class="table table-hovered">
                             <thead class="thead-light">
                             <tr>
@@ -89,7 +89,8 @@
                                     <td><%= recipe.ingredients %></td>
                                     <td><%= recipe.instructions %></td>
                                     <td>
-                                        <a href="/edit?id=<%=recipe.id%>&name=<%=recipe.name%>&ingredients=<%=recipe.ingredients%>&instructions=<%=recipe.instructions%>" class="btn btn-sm btn-secondary mb-2">Edit</a>
+                                        <a href="/edit?id=<%= recipe.id %>&name=<%= recipe.name %>&ingredients=<%= recipe.ingredients %>&instructions=<%= recipe.instructions %>"
+                                           class="btn btn-sm btn-secondary mb-2">Edit</a>
                                         <a href="/delete?id=<%= recipe.id %>" class="btn btn-sm btn-secondary mb-2">Delete</a>
                                     </td>
                                 </tr>
@@ -97,7 +98,7 @@
                             </tbody>
                         </table>
                     <% } else { %>
-                        <p class="text-center">No recipes found. Go <a href="/add" >here</a> to add recipe.</p>
+                        <p class="text-center">No recipes found. Go <a href="/add">here</a> to add recipe.</p>
                     <% } %>
                 </div>
             </div>
