--- a/node-mysql-crud-app/views/dashboard.ejs
+++ b/node-mysql-crud-app/views/dashboard.ejs
@@ -98,7 +98,7 @@
                             </tbody>
                         </table>
                     <% } else { %>
-                        <p class="text-center">No recipes found. Go <a href="/add">here</a> to add recipe.</p>
+                        <p class="text-center">No recipes found.</p>
                     <% } %>
                 </div>
             </div>
