--- a/node-mysql-crud-app/views/signup.ejs
+++ b/node-mysql-crud-app/views/signup.ejs
@@ -15,26 +15,26 @@
                 <div class="col-sm-6">
                   <br> <h3>Personal Info</h3> <hr>
                       <label for="firstname">First Name: </label>
-                      <input type="firstname" class="form-control mb-3" name="firstname" id="firstname" placeholder="First Name" required />
+                      <input type="firstname" class="form-control mb-3" name="firstname" id="firstname" placeholder="First Name" required >
 
                       <label for="lastname">Last Name: </label>
-                      <input type="lastname" class="form-control mb-3" name="lastname" id="lastname" placeholder="Last Name" required />
+                      <input type="lastname" class="form-control mb-3" name="lastname" id="lastname" placeholder="Last Name" required >
 
                       <label for="email">Email Address: </label>
-                      <input type="email" class="form-control mb-3" name="email" id="email" placeholder="email@example.com" required />
+                      <input type="email" class="form-control mb-3" name="email" id="email" placeholder="email@example.com" required >
 
                       <label for="skill">Cooking Skill Level: </label><br>
-                      <input type="skill" class="form-control mb-3" name="skill" id="skill" placeholder="Beginner, Intermediate or Experienced" required />
+                      <input type="skill" class="form-control mb-3" name="skill" id="skill" placeholder="Beginner, Intermediate or Experienced" required >
                 </div>
 
                 <!-- Column 2 -->
                 <div class="col-sm-6">
                   <br> <h3>Account Info</h3> <hr>
                   <label for="username">Username: </label>
-                  <input type="username" class="form-control mb-3" name="username" id="username" placeholder="Username" required />
+                  <input type="username" class="form-control mb-3" name="username" id="username" placeholder="Username" required >
 
                   <label for="password">Password: </label>
-                  <input type="password" class="form-control mb-3" name="password" id="password" placeholder="Password" required />
+                  <input type="password" class="form-control mb-3" name="password" id="password" placeholder="Password" required >
                 </div>
 
             </div>
@@ -46,7 +46,7 @@
 
                 <!-- Terms and Conditions Checkbox-->
                 <div class="checkbox">
-                     <input type="checkbox" class="mr-2 mb-3">I agree to the Terms and Conditions
+                     <input type="checkbox" class="mr-2 mb-3" required >I agree to the Terms and Conditions
                 </div>
 
             </div>
