updated footer, added logo

--- a/node-mysql-crud-app/views/partials/footer.ejs
+++ b/node-mysql-crud-app/views/partials/footer.ejs
@@ -1,6 +1,6 @@
     <footer class="footer" id="footer">
         <div class="container-fluid mt-3">
-            <span class="text-muted">Website Under Construction. Copyright &copy 2018 Elite Recipes</span>
+            <span class="text-muted">Copyright &copy 2018 Elite Recipes</span>
         </div>
     </footer>
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
