--- a/node-mysql-crud-app/views/index.ejs
+++ b/node-mysql-crud-app/views/index.ejs
@@ -7,7 +7,8 @@
     <section class="jumbotron mt-4" id="search">
         <div class="container text-center">
 
-            <h1 class="display-4">Elite Recipes.<br>The future of cooking.</h1>
+            <img class="img-fluid mr-5" style="height: 225px" src="images/logo.png" alt="EliteRecipes"/>
+            <h1 class="display-4">The future of cooking.</h1>
 
             <div class="row">
                 <div class="col m-2" id="circles">
